fixed spacing on mobile and added higher res img

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 100px;
+  margin-top: 40px;
   text-align: center;
 }
 
@@ -8,6 +8,7 @@ h4 {
 }
 
 img {
+  width: 250px;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -35,4 +36,11 @@ a {
     font-size: 30px;
     color: black;
     text-decoration: none;
+}
+
+@media (min-width: 400px) {
+  body {
+    margin-top: 100px;
+    text-align: center;
+  }
 }
